# FDMsolver

./: .gitignore  CMakeLists.txt  README.md
Data/: Profil.lay
Source files/: cGrid.cpp  cGrid.h  cPoint.cpp  cPoint.h  cSolution.cpp  cSolution.h  cSolver.cpp  cSolver.h  functions.h  main.cpp
TeX/: Strona tytułowa.doc  Szablon_projektu.tks  Wykresy.xlsx  bibliografia.tex  dodatek_A.tex  dodatek_B.tex  implementacja.tex  main.tex  model_matematyczny.tex  prezentacja.tex  wnioski.tex  wprowadzenie.tex  wyniki.tex
TeX/Rysunki/: NACA_0012_nosek_brute.eps  NACA_0012_nosek_poisson.eps  NACA_0012_ostrze_brute.eps  NACA_0012_ostrze_poisson.eps  NACA_0012_profil_brute.eps  NACA_0012_profil_poisson.eps  NACA_0012_profil_poisson_guess.eps  NACA_8207_nosek_brute.eps  NACA_8207_nosek_poisson.eps  NACA_8207_ostrze_brute.eps  NACA_8207_ostrze_poisson.eps  gwiazda_roznicowa.eps  roznice_skonczone_interpretacja.eps  roznice_skonczone_x.eps  roznice_skonczone_xx.eps
data/: Krawedz_natarcia.lay  Solution_2.lay
src/: cGrid.cpp  cGrid.h  cPoint.cpp  cPoint.h  cSolution.cpp  cSolution.h  cSolver.cpp  cSolver.h  functions.h  main.cpp
